--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   background-position: center center;
   -webkit-transition: all 3s ease;
   transition: all 3s ease;
+  background-size: cover;
 }
 
 button {
