--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>onboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Onboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.1" rel="stylesheet" type="text/css">
-
+    <style>
+    .clock-panel .particle {
+      position: absolute;
+      border-radius: 100%;
+      background-color: #e4ef9d;
+      box-shadow: 0 0 6px #040400e8;
+      border: 1px solid #a1b580;
+      -webkit-transition: all .5s ease-in-out;
+      -moz-transition: all .5s ease-in-out;
+      -ms-transition: all .5s ease-in-out;
+      -o-transition: all .5s ease-in-out;
+      transition: all .5s ease-in-out;
+  }
+    </style>
   </head>
   <body>
     <div id="app"></div>
