--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Onboard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.1" rel="stylesheet" type="text/css">
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Onboard</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" type="image/jpg" href="favicon.ico"><meta name="title" content="Onboard"><meta name="description" content="Onboarding page"><meta name="keywords" content="onboard, tasklist, focus, background, quote, for the day, start new day, clock, weather, notes, note, take note"><meta name="robots" content="index, follow"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="language" content="English"><meta name="author" content="Kien Vu"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"><link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.1" rel="stylesheet" type="text/css"><script async src="https://www.googletagmanager.com/gtag/js?id=G-QH0HP56CTH"></script><script>window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
-</html>
+      gtag('config', 'G-QH0HP56CTH');</script><link href="/css/app.2cd72390.css" rel="preload" as="style"><link href="/js/app.73134cc0.js" rel="preload" as="script"><link href="/js/chunk-vendors.0e219cf0.js" rel="preload" as="script"><link href="/css/app.2cd72390.css" rel="stylesheet"></head><body><div id="app"></div><script src="/js/chunk-vendors.0e219cf0.js"></script><script src="/js/app.73134cc0.js"></script></body></html>
